RESOLVED FIXED220193
[LFC][IFC] Incorrectly positioned content with vertical-align: length/percentage
https://bugs.webkit.org/show_bug.cgi?id=220193
Summary [LFC][IFC] Incorrectly positioned content with vertical-align: length/percentage
alan
Reported 2020-12-29 07:38:11 PST
should use the inline box's baseline, not the height.
Attachments
Patch (3.50 KB, patch)
2020-12-29 07:41 PST, alan
no flags
alan
Comment 1 2020-12-29 07:41:42 PST
EWS
Comment 2 2020-12-29 10:09:17 PST
Committed r271106: <https://trac.webkit.org/changeset/271106> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416840 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-29 10:10:15 PST
Note You need to log in before you can comment on or make changes to this bug.