[LFC][IFC] Incorrectly positioned content with vertical-align: length/percentage https://bugs.webkit.org/show_bug.cgi?id=220193

Reviewed by Antti Koivisto.

vertical-align: length/percentage is a baseline shift. Let's use the inline level box's baseline and not its height
when adjusting the vertical position (css1/text_properties/vertical_align.html).

* layout/inlineformatting/InlineFormattingContextGeometry.cpp:
(WebCore::Layout::LineBoxBuilder::computeLineBoxHeightAndAlignInlineLevelBoxesVertically):


Canonical link: https://commits.webkit.org/232703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271106 268f45cc-cd09-0410-ab3c-d52691b4dbfc